--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ capybara-*.html
 **.orig
 rerun.txt
 pickle-email-*.html
-
+/config/database.yml
 ## Environment normalisation:
 /.bundle
 /vendor/bundle
