--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,6 @@ pickle-email-*.html
 .rvmrc
 
 # if using bower-rails ignore default bower_components path bower.json files
-/vendor/assets/bower_components
+#/vendor/assets/bower_components
 *.bowerrc
-bower.json
+#bower.json
