--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,14 +1,14 @@
-upstream appli_campus {
-  server unix:///home/deploy/apps/appli_campus/shared/tmp/sockets/appli_campus-puma.sock;
+upstream puma {
+  server unix:///home/appli-campus/apps/appli-campus/shared/tmp/sockets/appname-puma.sock;
 }
 
 server {
   listen 80 default_server deferred;
-  # server_name 192.168.33.28;
+  # server_name 178.62.95.127;
 
-  root /home/deploy/apps/appli_campus/current/public;
-  access_log /home/deploy/apps/appli_campus/current/log/nginx.access.log;
-  error_log /home/deploy/apps/aappli_campus/current/log/nginx.error.log info;
+  root /home/appli-campus/apps/appli-campus/current/public;
+  access_log /home/appli-campus/apps/appli-campus/current/log/nginx.access.log;
+  error_log /home/appli-campus/apps/appli-campus/current/log/nginx.error.log info;
 
   location ^~ /assets/ {
     gzip_static on;
